--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ footer {
 }
   
   /* Image Styling */
-#home img {
+#home img, #projects img {
     width: 150px; /* Fixed width for the profile picture */
     height: auto; /* Maintain aspect ratio */
     border-radius: 50%; /* Circular image */
