--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ footer {
     margin: 10px 0;
 }
 #projects img {
-    width: 75px;
-    height: auto;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     margin: 10px 0;
 }
